--- a/css/styles.css
+++ b/css/styles.css
@@ -36,3 +36,10 @@ body{
 .navbar-dark {
      background-color: #512DA8;
 }
+
+.radio-inline{
+    padding-right: 10px;
+}
+.bg-primary{
+    background: yellow;
+}
