--- a/css/styles.css
+++ b/css/styles.css
@@ -40,6 +40,10 @@ body{
 .radio-inline{
     padding-right: 10px;
 }
-.bg-primary{
-    background: yellow;
+
+.tab-content {
+    border-left: 1px solid #ddd;
+    border-right: 1px solid #ddd;
+    border-bottom: 1px solid #ddd;
+    padding: 10px;
 }
