--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,12 @@
+.modal-header {
+  background: #9575CD; }
+
+.modal-body {
+  background: #D1C4E9; }
+
+.modal-title, .close {
+  color: #fffaf0; }
+
 .row-header {
   margin: 0px auto;
   padding: 0px 0px; }
